Fix bug 1684086: Prevent resource path overflow in resource menu (#1791)

--- a/frontend/src/core/resource/components/ResourceItem.css
+++ b/frontend/src/core/resource/components/ResourceItem.css
@@ -8,3 +8,11 @@
     background: #3f4752;
     color: #fff;
 }
+
+.resource-menu .menu li a .path {
+    display: inline-block;
+    max-width: 550px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
